# s2h

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  application.cpp  application.h  s2h.cpp
include/s2h/: buffer.h  joined_span.h  math.h  property.h  timer.h  vector.h  vertex.h
include/s2h/Engine/: gameobject.h  resource_manager.h  scene.h
include/s2h/Engine/Component/: camera.h  component.h  mesh_renderer.h  transform.h
include/s2h/Engine/ECS/: ecs.h  entity.h
include/s2h/Engine/ECS/Component/: camera.h  mesh_renderer.h  transform.h
include/s2h/Engine/ECS/System/: render.h  system.h  transform.h
include/s2h/Engine/OOP/: gameobject.h  scene.h
include/s2h/Engine/OOP/Component/: camera.h  component.h  mesh_renderer.h  transform.h
include/s2h/IO/: binary.h  reader.h  serialize.h  writer.h
include/s2h/Math/: math.h  matrix.h  vector.h
include/s2h/Renderer/: buffer.h  descriptor.h  hardware_rasterizer.h  misc.h  renderer.h  renderer_builder.h  shader.h  software_rasterizer.h  texture.h  vertex.h
include/s2h/Resource/: mesh.h  resource.h  texture.h
src/: CMakeLists.txt
src/Engine/: gameobject.cpp  scene.cpp
src/Engine/Component/: camera.cpp  component.cpp  transform.cpp
src/Engine/ECS/: ecs.cpp
src/Engine/ECS/System/: transform.cpp
src/Engine/OOP/: gameobject.cpp  scene.cpp
src/Engine/OOP/Component/: camera.cpp  component.cpp  transform.cpp
src/IO/: binary.cpp
src/Renderer/: buffer.cpp  renderer.cpp  renderer_builder.cpp  software_rasterizer.cpp  texture.cpp
src/Resource/: mesh.cpp  texture.cpp
test/: CMakeLists.txt  matrix_success.cpp  vector_success.cpp
